fix: Layout issues when resizing Cloud Config parameter dialog (#3241)

--- a/src/dashboard/Data/Config/ConfigConflictDiff.scss
+++ b/src/dashboard/Data/Config/ConfigConflictDiff.scss
@@ -6,12 +6,13 @@
  * the root directory of this source tree.
  */
 .container {
+  contain: inline-size;
   width: 100%;
-  min-width: 100%;
+  min-width: 0;
   overflow: auto;
-  height: 200px;
+  height: 80px;
   min-height: 80px;
-  resize: both;
+  resize: vertical;
   text-align: left;
 }
 
